--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  /* when `#id` scrolling happens, leave room for header */
+  scroll-padding-top: var(--appbar-offset);
+}
+
+.backface-hidden { backface-visibility: hidden; }
+.will-change-transform { will-change: transform; }
+
 @layer base {
   :root {
     --background: 200 60% 96.7%; /* #EBF4F8 */
